<resources>
    <string name="app_name">Калькулятор</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="equally">=</string>
    <string name="separate">÷</string>
    <string name="multi">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="backspace">⌫</string>
    <string name="zero">C</string>
    <string name="switch_layout">⚙</string>
    <string name="doubleZero">00</string>
    <string name="percent">%</string>
    <string name="plus_minus">±</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="defaultTheme"> По умолчанию</string>
    <string name="NightTheme"> Ночная тема</string>
    <string name="PinkTheme"> Красно-розовая тема</string>
    <string name="VeryDarkTheme"> Темная тема</string>
</resources>
