<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="bottom"
    android:hapticFeedbackEnabled="false"
    android:orientation="vertical">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/numText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|end"
        android:hint="@string/_0"
        android:textSize="@dimen/TextViewSize" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/LinearLayoutSize"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button7"
            style="@style/NumberDisplayStyle"
            android:text="@string/_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button8"
            style="@style/NumberDisplayStyle"
            android:text="@string/_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button9"
            style="@style/NumberDisplayStyle"
            android:text="@string/_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/multi"

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multi"
            android:textSize="@dimen/TextSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/LinearLayoutSize"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            style="@style/NumberDisplayStyle"
            android:text="@string/_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button5"
            style="@style/NumberDisplayStyle"
            android:text="@string/_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button6"
            style="@style/NumberDisplayStyle"
            android:text="@string/_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textSize="@dimen/TextSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/LinearLayoutSize"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            style="@style/NumberDisplayStyle"
            android:text="@string/_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            style="@style/NumberDisplayStyle"
            android:text="@string/_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            style="@style/NumberDisplayStyle"
            android:text="@string/_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textSize="@dimen/TextSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/LinearLayoutSize"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/switchLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/switch_layout"
            android:textSize="@dimen/TextSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button0"
            style="@style/NumberDisplayStyle"
            android:text="@string/_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/doubleZero"
            style="@style/NumberDisplayStyle"
            android:text="@string/doubleZero" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/separate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/separate"
            android:textSize="@dimen/TextSize" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/LinearLayoutSize"
        android:background="@android:color/white"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="@dimen/TextSize" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/backspace"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/backspace"
            android:textSize="@dimen/TextSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/equally"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equally"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="@dimen/TextSize" />


    </LinearLayout>

</LinearLayout>