<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

    </RadioGroup>

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radioButtonMyTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/defaultTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radioButtonNightMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NightTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtonMyTheme" />

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radioButtonMaterialLightDarkAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PinkTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtonNightMode" />

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radioButtonMaterialDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/VeryDarkTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtonMaterialLightDarkAction" />

</androidx.constraintlayout.widget.ConstraintLayout>
